8199008: [macOS, Linux] Instantiating MediaPlayer causes CPU usage to be over 100%

Reviewed-by: kcr